# remzar

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
docs/: README.md
docs/screenshots/: .gitkeep
docs/whitepaper/: .gitkeep
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_alpha_001_global_configuration.rs  fuzz_block_001_metadata.rs  fuzz_block_002_blocks.rs  fuzz_block_003_puzzleproof.rs  fuzz_blockchain_000_consensus.rs  fuzz_blockchain_001_builder.rs  fuzz_blockchain_003_orchestration_engine.rs  fuzz_blockchain_004_orchestration_run.rs  fuzz_blockchain_005_start.rs  fuzz_command_line_003_manager.rs  fuzz_command_manager.rs  fuzz_committee_eligibility.rs  fuzz_genesis_001_block.rs  fuzz_hash_system_remzarhash.rs  fuzz_mempool.rs  fuzz_ml_dsa_65_001_keypairs.rs  fuzz_ml_dsa_65_002_merkleproof.rs  fuzz_ml_dsa_65_003_batch_signature.rs  fuzz_ml_dsa_65_004_guardian_signature.rs  fuzz_ml_dsa_65_005_encryption.rs  fuzz_ml_dsa_65_006_edwallet.rs  fuzz_p2p_001_sync_builders.rs  fuzz_p2p_002_sync_handlers.rs  fuzz_p2p_003_sync_swarmevent.rs  fuzz_p2p_004_sync_entrypoint.rs  fuzz_p2p_005_pq_fips203kem.rs  fuzz_p2p_005_sync_gossipsub.rs  fuzz_p2p_006_reqresp.rs  fuzz_p2p_006_sync_runtime.rs  fuzz_p2p_007_handshake.rs  fuzz_p2p_008_broadcast.rs  fuzz_por_002_puzzle_engine.rs  fuzz_por_004_puzzle_proof.rs  fuzz_por_007_leader_schedule.rs  fuzz_reorg_005_fork_choice.rs  fuzz_reward_halving.rs  fuzz_rocksdb_002_schema.rs  fuzz_rocksdb_003_batches.rs  fuzz_rocksdb_005_manager.rs  fuzz_s_02_generate_wallet.rs  (+11 more)
node1/: genesis.json
src/: lib.rs  main.rs
src/blockchain/: block_001_metadata.rs  block_002_blocks.rs  block_003_puzzleproof.rs  blockchain_000_consensus.rs  blockchain_001_builder.rs  blockchain_002_orchestration_display.rs  blockchain_003_orchestration_engine.rs  blockchain_004_orchestration_run.rs  blockchain_005_start.rs  genesis_001_block.rs  genesis_002_file.rs  halving_schedule.rs  mempool.rs  mod.rs  transaction_001_tx.rs  transaction_002_tx_register.rs  transaction_003_tx_reward.rs  transaction_004_tx_kind.rs  transaction_005_tx_account_tree.rs  transaction_005_tx_batch.rs  transaction_006_tx_account_tree_guards.rs  validation.rs  validatorstate.rs
src/commandline/: command_line_001_interface.rs  command_line_002_menu.rs  command_line_003_manager.rs  mod.rs  s_01_setup_database.rs  s_02_generate_wallet.rs  s_03_startnode.rs  s_04_view_blockchain_console.rs  s_05_send_remzar.rs  s_06_receive_remzar.rs  s_07_view_status.rs  s_08_check_balance.rs  s_09_list_wallets.rs  s_10_create_certificates.rs  s_11_send_chat.rs  s_12_send_file.rs  s_13_wallet_utilities.rs  s_14_backup_wallet.rs  s_15_debug_wallet_storage_keys.rs  s_16_debug_logs.rs  s_17_debug_audit_report.rs  s_18_games.rs  s_19_frequently_asked_questions.rs  s_20_exit.rs
src/consensus/: mod.rs  por_000_ephemeral_registration.rs  por_001_consensus_config.rs  por_002_puzzle_engine.rs  por_003_puzzle_pool.rs  por_004_puzzle_proof.rs  por_005_time_management.rs  por_006_committee_eligibility.rs  por_007_leader_schedule.rs  por_008_validator_lifecycle.rs
src/cryptography/: ml_dsa_65_001_keypairs.rs  ml_dsa_65_002_merkleproof.rs  ml_dsa_65_003_batch_signature.rs  ml_dsa_65_004_guardian_signature.rs  ml_dsa_65_005_encryption.rs  ml_dsa_65_006_edwallet.rs  mod.rs
src/network/: mod.rs  p2p_001_transport.rs  p2p_002_protocal.rs  p2p_003_behaviour.rs  p2p_004_peerdiscovery.rs  p2p_005_pq_fips203kem.rs  p2p_006_reqresp.rs  p2p_007_handshake.rs  p2p_008_broadcast.rs  p2p_009_events.rs  p2p_010_netcmd.rs  p2p_011_peerbook.rs  p2p_012_janitor_peerbook.rs  p2p_013_peer_mesh.rs  p2p_014_chat.rs  p2p_015_chat_store.rs  p2p_016_file_store.rs  p2p_017_conn_guard.rs  p2p_018_last_resort_guards.rs  p2p_019_inflight_limiter.rs
src/privacy/: mod.rs  privacy_001_private_receive_wallet.rs  privacy_002_private_receive_invoice.rs  privacy_003_private_wallet_index.rs
src/reorganization/: mod.rs  reorg_001_block_index.rs  reorg_002_chain_view.rs  reorg_003_branch_score.rs  reorg_004_batch_index.rs  reorg_005_fork_choice.rs  reorg_006_manager.rs  reorg_007_branch_hydration.rs
src/runtime/: mod.rs  p2p_001_sync_builders.rs  p2p_002_sync_handlers.rs  p2p_003_sync_swarmevent.rs  p2p_004_sync_entrypoint.rs  p2p_005_sync_gossipsub.rs  p2p_006_sync_runtime.rs  p2p_007_sync_helper.rs
src/storage/: mod.rs  rocksdb_000_directory.rs  rocksdb_001_cf_descriptors.rs  rocksdb_002_schema.rs  rocksdb_003_batches.rs  rocksdb_004_config.rs  rocksdb_005_manager.rs  rocksdb_006_manager_ext.rs  rocksdb_007_db_guard.rs  rocksdb_008_helper.rs
src/tokens/: game_slot_machine.rs  mod.rs  nft_001.rs  rwa_asset_certificate.rs
src/utility/: alpha_001_global_configuration.rs  alpha_002_error_detection_system.rs  alpha_003_detection_system.rs  audit_report_001_hub.rs  (+12 more)
tests/: admission_test_tests.rs  alpha_001_global_configuration_tests.rs  alpha_002_error_detection_system_tests.rs  alpha_003_detection_system_tests.rs  audit_report_001_hub_tests.rs  audit_report_002_pdf_tests.rs  audit_report_003_json_tests.rs  block_001_metadata_tests.rs  block_002_blocks_tests.rs  block_003_puzzleproof_tests.rs  blockchain_000_consensus_tests.rs  blockchain_001_builder_tests.rs  blockchain_002_orchestration_display_tests.rs  blockchain_003_orchestration_engine_tests.rs  blockchain_004_orchestration_run_tests.rs  blockchain_005_start_tests.rs  burn_system_tests.rs  certificate_receipt_tests.rs  command_line_001_interface_tests.rs  command_line_002_menu_tests.rs  command_line_003_manager_tests.rs  digital_id_receipt_tests.rs  e2e_p2p_001_sync_builders.rs  e2e_p2p_002_protocal.rs  e2e_p2p_002_sync_handlers.rs  e2e_p2p_003_behaviour.rs  e2e_p2p_003_sync_swarmevent.rs  e2e_p2p_004_peerdiscovery.rs  e2e_p2p_004_sync_entrypoint.rs  e2e_p2p_005_pq_fips203kem.rs  e2e_p2p_005_sync_gossipsub.rs  e2e_p2p_006_reqresp.rs  e2e_p2p_006_sync_runtime.rs  e2e_p2p_007_handshake.rs  e2e_p2p_008_broadcast.rs  e2e_p2p_009_events.rs  e2e_p2p_017_conn_guard.rs  e2e_p2p_018_last_resort_guards.rs  e2e_p2p_019_inflight_limiter.rs  file_generate_burn_address_tests.rs  (+166 more)
(+2 files in other folders)
