[package]
name         = "remzar"
version      = "1.0.0"
edition      = "2024"
rust-version = "1.96"
authors      = ["Remzar Blockchain <remzarchain@gmail.com>"]
description  = "Remzar Blockchain: Post quantum, modular, lightweight blockchain in Rust."
license      = "MIT"
homepage     = "https://www.remzar.com/"
repository   = "https://github.com/remzarchain/remzar"
readme       = "README.md"
keywords     = ["blockchain", "cryptography", "rust"]
categories   = ["cryptography::cryptocurrencies", "network-programming", "database"]
include      = [
    "src/**",
    "assets/**",
    "build.rs",
    "LICENSE",
    "README.md",
    "CHANGELOG.md"
]

[workspace]
resolver = "2"
exclude = [
    "fuzz",
]

[dependencies]
directories        = "6.0.0"
rand               = "0.10.1"
parking_lot        = "0.12.5"
hex-literal        = "1.1.0"
rayon              = "1.12.0"
colored            = "3.1.1"
once_cell          = "1.21.4"
num_cpus           = "1.17.0"
pdf-writer         = "0.15.0"
regex              = "1.12.4"
aes-gcm            = "0.10.3"
blake3             = "1.8.5"
argon2             = "0.5.3"
zeroize            = "1.9.0"
dialoguer          = "0.12.0"
futures            = "0.3.32"
chrono             = "0.4.45"
serde-big-array    = "0.5.1"
serde_json         = "1.0.150"
serde_bytes        = "0.11.19"
thiserror          = "2.0.18"
anyhow             = "1.0.102"
qrcode             = "0.14.1"
fs4                = { version = "1.1.0", features = ["sync"] }
hex                = { version = "0.4.3", features = ["serde"] }
uuid               = { version = "1.23.3", features = ["v4"] }
bitflags           = { version = "2.13.0", features = ["serde"] }
serde              = { version = "1.0.228", features = ["derive"] }
clap               = { version = "4.6.1", features = ["derive", "env"] }
postcard           = { version = "1.1.3", features = ["alloc", "use-std"] }
tracing            = { version = "0.1.44", features = ["attributes"] }
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
image              = { version = "0.25.10", default-features = false, features = ["png"] }
tokio              = { version = "1.52.3", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "signal"] }
rust-rocksdb       = { version = "0.50.0", default-features = false, features = ["bindgen-runtime", "snappy", "lz4", "zstd"] }
fips204            = { version = "0.4.6", default-features = false, features = ["ml-dsa-65", "default-rng"] }
fips203            = { version = "0.4.3", default-features = false, features = ["ml-kem-768", "default-rng"] }
libp2p             = { version = "0.56.0", default-features = false, features = [
    "tcp", "dns", "noise", "ping", "gossipsub", "kad", "identify", "tokio", "yamux", "macros", "request-response"
] }

[features]
default = ["mainnet"]
mainnet = ["tracing/release_max_level_info"]
diagnostic = []

[lib]
name = "remzar"
path = "src/lib.rs"

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
proptest = "1.11.0"

[build-dependencies]
winresource = "0.1.31"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
overflow-checks = true
debug-assertions = false
incremental = false

[package.metadata.docs.rs]
all-features = true
